Fix footer alignment

--- a/css/app.css
+++ b/css/app.css
@@ -8,10 +8,10 @@ header {
     width: 100%;
 
 footer {
-    text-align: center;
-    font-size: 0.9em;
-    clear: both; 
-    /* top, right, bottom, left */ 
-    padding: 8px 0px 8px 0px;   
+    color: rgba(0,0,0, 0.7);
+    padding: 8px 0 8px 0;
+    font-size: 0.7em;
+    clear: both;
     border-top: 1px solid rgba(0,0,0, 0.1);
+    text-align: center;
 }
